--- a/evaluator/train-test.adoc
+++ b/evaluator/train-test.adoc
@@ -42,7 +42,7 @@ automatically configures the evaluation to run on the train-test pairs produced 
 task, and enrolls the crossfold task as a dependency for the train-test task so that Gradle will
 make sure to run them in the correct order.
 
-You can also specify manually-created train-test splits, using data manifests:
+You can also specify manually-created train-test splits, using link:../reference/data-manifest.adoc[data manifests]:
 
 [source,groovy]
 .....
